Corrected on account of newInstance( ) being deprecated since Java 9